--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
   --fs-small: 1.25rem;
   --fs-xsmall: 1rem;
   --fs-body: 0.875rem;
+  --fs-s-body: 0.75rem;
 
   /* font-families */
   --ff-spaceMono: "Space Mono", monospace;
@@ -170,7 +171,16 @@ select {
 /* Compontents                 */
 /* --------------------------- */
 
+.tip-calculator-logo {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-block: 2rem;
+}
+
 .form-container {
+  flex-direction: column;
+  gap: 1.5rem;
   background-color: hsl(var(--clr-white));
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
@@ -179,6 +189,37 @@ select {
 
 .bil-section {
   flex-direction: column;
+  gap: 0.25rem;
+}
+
+.bill-input,
+.tip-input,
+.number-of-people-input {
+  background-color: hsl(var(--clr-grey-50));
+  font-size: var(--fs-small);
+  text-align: end;
+  border-radius: 5px;
+  border: none;
+  padding-block: .25rem;
+  padding-inline: 1rem;
+  cursor: pointer;
+}
+
+.bill-input {
+  background-image: url("./images/icon-dollar.svg");
+  background-repeat: no-repeat;
+  background-position: left 1rem center;
+}
+/* background-position: x y; */
+
+.bill-input:hover,
+.tip-input:hover,
+.number-of-people-input:hover,
+.bill-input:focus,
+.tip-input:focus,
+.number-of-people-input:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px hsl(var(--clr-light-green));
 }
 
 input[type="number"]::-webkit-outer-spin-button,
@@ -193,6 +234,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .tip-section {
   flex-direction: column;
+  gap: .25rem;
 }
 
 .tip-choice-section {
@@ -204,23 +246,102 @@ input[type="number"]::-webkit-inner-spin-button {
 .tip-btn {
   background-color: hsl(var(--clr-dark-green));
   color: hsl(var(--clr-white));
+  font-size: var(--fs-small);
   width: 100%;
+  border-radius: 5px;
+  border: none;
+  padding-inline: 2rem;
+  padding-block: .25rem;
+  cursor: pointer;
+  transition: background-color 200ms ease, color 300ms ease;
+}
+
+.tip-btn[aria-checked="true"] {
+  background-color: hsl(var(--clr-light-green));
+  color: hsl(var(--clr-dark-green));
+}
+
+.tip-btn:hover,
+.tip-btn:focus {
+  outline: none;
+  background-color: hsl(var(--clr-light-green)/0.40);
+  color: hsl(var(--clr-dark-green));
 }
 
 .tip-input {
-  padding: 0;
+  display: block;
+  width: 100%;
 }
 
 .number-of-people-section {
   flex-direction: column;
+  gap: .25rem;
+}
+
+.number-of-people-input {
+  background-image: url("./images/icon-person.svg");
+  background-repeat: no-repeat;
+  background-position: left 1rem center;
 }
 
 .results-section {
   background-color: hsl(var(--clr-dark-green));
   flex-direction: column;
   padding: 1rem;
+  border: none;
+  border-radius: 10px;
+  gap: 1.5rem;
+}
+
+.results-list {
+  flex-direction: column;
+  margin: 0;
+  gap: 1rem;
+}
+
+.results-tip-section,
+.results-total-section {
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.results-data {
+  flex-direction: column;
+  gap: 0;
+}
+
+.results-section dt {
+  color: hsl(var(--clr-white));
+}
+
+.results-section dd {
+  margin: 0;
+}
+
+.per-person-dd {
+  font-size: var(--fs-s-body);
+}
+
+.tip-dd,
+.total-dd {
+  color: hsl(var(--clr-light-green));
+  font-size: var(--fs-medium);
 }
 
 .reset-btn {
   background-color: hsl(var(--clr-light-green));
+  color: hsl(var(--clr-dark-green));
+  font-size: var(--fs-small);
+  border-radius: 5px;
+  border: none;
+  padding-block: .25rem;
+  cursor: pointer;
+  transition: background-color 200ms ease;
+}
+
+.reset-btn:hover,
+.reset-btn:focus {
+  outline: none;
+  background-color: hsl(var(--clr-light-green)/0.50);
 }
