--- a/style.css
+++ b/style.css
@@ -36,14 +36,14 @@
   font-display: swap;
   font-family: 'Space Mono';
   font-weight: 400;
-  src: url('.fonts/SpaceMono-Regular.ttf') format('ttf');
+  src: url('./fonts/SpaceMono-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-display: swap;
   font-family: 'Space Mono';
   font-weight: 700;
-  src: url('./fonts/SpaceMono-Bold.ttf') format('ttf');
+  src: url('./fonts/SpaceMono-Bold.ttf') format('truetype');
 }
 
 /* --------------------------- */
@@ -196,14 +196,24 @@ select {
   color: orange;
 }
 
-.bil-section {
+.error-border-bill,
+.error-border-tip,
+.error-border-people {
+  outline: none;
+  box-shadow: 0 0 0 2px orange;
+}
+
+.bill-section {
   flex-direction: column;
   gap: 0.25rem;
 }
 
 .bill-input,
+.error-border-bill,
 .tip-input,
-.number-of-people-input {
+.error-border-tip,
+.number-of-people-input,
+.error-border-people {
   background-color: hsl(var(--clr-grey-50));
   font-size: var(--fs-small);
   text-align: end;
@@ -214,7 +224,8 @@ select {
   cursor: pointer;
 }
 
-.bill-input {
+.bill-input,
+.error-border-bill {
   background-image: url("./images/icon-dollar.svg");
   background-repeat: no-repeat;
   background-position: left 1rem center;
@@ -228,7 +239,7 @@ select {
 .tip-input:focus,
 .number-of-people-input:focus {
   outline: none;
-  box-shadow: 0 0 0 2px hsl(var(--clr-light-green));
+  box-shadow: inset 0 0 0 2px hsl(var(--clr-light-green));
 }
 
 input[type="number"]::-webkit-outer-spin-button,
@@ -237,9 +248,9 @@ input[type="number"]::-webkit-inner-spin-button {
   margin: 0;
 }
 
-/* input[type="number"] {
+input[type="number"] {
   -moz-appearance: textfield;
-} */
+}
 
 .tip-section {
   flex-direction: column;
@@ -271,13 +282,16 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .tip-btn:hover,
-.tip-btn:focus {
+.tip-btn:focus,
+.tip-btn[aria-checked="true"]:focus,
+.tip-btn[aria-checked="true"]:hover {
   outline: none;
-  background-color: hsl(var(--clr-light-green)/0.40);
+  background-color: hsl(168 60% 80%);
   color: hsl(var(--clr-dark-green));
 }
 
-.tip-input {
+.tip-input,
+.error-border-tip {
   display: block;
   width: 100%;
 }
@@ -287,7 +301,8 @@ input[type="number"]::-webkit-inner-spin-button {
   gap: .25rem;
 }
 
-.number-of-people-input {
+.number-of-people-input,
+.error-border-people {
   background-image: url("./images/icon-person.svg");
   background-repeat: no-repeat;
   background-position: left 1rem center;
@@ -339,18 +354,22 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .reset-btn {
-  background-color: hsl(var(--clr-light-green));
+  background-color: hsl(var(--clr-light-green)/0.20);
   color: hsl(var(--clr-dark-green));
   font-size: var(--fs-small);
   border-radius: 5px;
   border: none;
   padding-block: .25rem;
-  cursor: pointer;
   transition: background-color 200ms ease;
 }
 
-.reset-btn:hover,
-.reset-btn:focus {
+.reset-btn:not(:disabled) {
   outline: none;
-  background-color: hsl(var(--clr-light-green)/0.50);
+  background-color: hsl(var(--clr-light-green));
+  cursor: pointer;
+}
+
+.reset-btn:not(:disabled):hover,
+.reset-btn:not(:disabled):focus {
+  background-color: hsl(168 60% 70%);
 }
