--- a/style.css
+++ b/style.css
@@ -93,7 +93,8 @@ body {
   background-color: hsl(var(--clr-grey-200));
   line-height: 1.5;
   letter-spacing: 1px;
-  height: 100dvh;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 /* make images easier to work with */
@@ -145,44 +146,21 @@ select {
   border: 0;
 }
 
-/* colors */
-
-.bg-blue {
-  background-color: hsl(var(--clr-dark-blue));
-}
-
-.bg-grey {
-  background-color: hsl(var(--clr-dark-grey));
-}
-
-.bg-yellow {
-  background-color: hsl(var(--clr-dark-yellow));
-}
-
-/* typography */
-
-.letter-spacing-1 { letter-spacing: 0.8px; } 
-.letter-spacing-2 { letter-spacing: 1px; } 
-.letter-spacing-3 { letter-spacing: 1.25px; }
-.letter-spacing-4 { letter-spacing: 1.5px; } 
-.letter-spacing-5 { letter-spacing: 2.5px; }
-
 .uppercase { text-transform: uppercase; }
 
 /* --------------------------- */
 /* Compontents                 */
 /* --------------------------- */
 .container {
-  display: flex;
   flex-direction: column;
-  flex: 1;
+  gap: 2.5rem;
 }
 
 .tip-calculator-logo {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding-block: 2rem;
+  padding-block-start: 2.5rem;
 }
 
 .form-container {
@@ -196,7 +174,6 @@ select {
 }
 
 .inputs-sections {
-  display: flex;
   flex-direction: column;
   gap: 1rem;
 }
@@ -214,7 +191,7 @@ select {
 .error-border-tip,
 .error-border-people {
   outline: none;
-  box-shadow: 0 0 0 2px orange;
+  box-shadow: inset 0 0 0 2px orange;
 }
 
 .bill-section {
@@ -261,8 +238,7 @@ input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
-}
-
+} 
 input[type="number"] {
   -moz-appearance: textfield;
 }
@@ -282,10 +258,10 @@ input[type="number"] {
   background-color: hsl(var(--clr-dark-green));
   color: hsl(var(--clr-white));
   font-size: var(--fs-small);
-  width: 100%;
+  max-width: 100%;
   border-radius: 5px;
   border: none;
-  padding-inline: 2rem;
+  padding-inline: 1rem;
   padding-block: .25rem;
   cursor: pointer;
   transition: background-color 200ms ease, color 300ms ease;
@@ -347,7 +323,7 @@ input[type="number"] {
 
 .results-data {
   flex-direction: column;
-  gap: 0;
+  gap: .5rem;
 }
 
 .results-section dt {
@@ -393,7 +369,7 @@ input[type="number"] {
   .form-container {
     margin-inline: auto;
     margin-bottom: 3rem;
-    width: 400px;
+    width: min(400px, 100%);
     border-radius: 20px;
   }
 }
@@ -404,11 +380,20 @@ input[type="number"] {
     align-items: center;
   }
 
+  .container {
+    gap: 4rem;
+  }
+
+  .tip-calculator-logo {
+    padding-block-start: 0;
+  }
+
   .form-container {
     flex-direction: row;
     align-items: stretch;
     margin: auto;
     width: 750px;
+    padding: 2rem;
   }
 
   .form-container > div {
@@ -419,7 +404,7 @@ input[type="number"] {
 
   .inputs-sections {
     flex: 1;
-    gap: 1rem;
+    gap: 2.5rem;
   }
 
   .results-section {
@@ -435,7 +420,7 @@ input[type="number"] {
   }
 
   .tip-input {
-    font-size: var(--fs-xsmall);
+    padding-inline: .4rem;
   }
 
   .results-list {
